# EUpublicCodeHealth

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  main.py  models.py
app/api/: auth.py  main.py  queries.py  schemas.py
app/api/routes/: exports.py  health.py  projects.py  runs.py
app/core/: config.py  logging.py  publiccode_parser.py  sanitize.py  status.py  url_normalize.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 1bcf05100e7e_initial_schema.py  2add_composite_indexes.py
connectors/: catalog_source.py  developers_italia.py  github_client.py
dashboard/: main.py
db/: schema.sql
deploy/: entrypoint.sh  scheduler.sh
docs/: EU_PUBLICODEHEALTH_IMPLEMENTATION_PLAN.md  data_dictionary.md  deployment.md  methodology.md
pipelines/: classify_status.py  enrich_repositories.py  ingest_catalog.py  init_db.py  run_all.py  run_pipeline.py
tests/: conftest.py  test_catalog_source.py  test_classify.py  test_github_parse.py
tests/fixtures/: developers_italia_page1.json  developers_italia_page2.json  github_repo_response.json  software_entry_github.json
tests/integration/: test_classify_status.py  test_db_persistence.py  test_developers_italia_connector.py  test_github_enrichment.py
tests/unit/: test_api_auth.py  test_api_routes.py  test_classify_status.py  test_config.py  test_github_client.py  test_ingest_catalog.py  test_publiccode_parser.py  test_sanitize.py  test_status.py  test_url_normalize.py
